<?xml version="1.0"?>
<package format="3">
  <name>urc_rover</name>
  <version>0.0.0</version>
  <description>URC rover nodes</description>
  <maintainer email="asifurr477@gmail.com">asifur-rahman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>opencv-python</exec_depend> 
  <exec_depend>custom_action_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

